@@ -11,7 +11,7 @@ public class AsyncService {
     @Async(value = "taskExecutor")
     public void asyncTest(int val) throws InterruptedException {
         Thread.sleep(500);
-        System.out.println(Thread.currentThread().getName()+":"+Thread.currentThread().threadId()+":"+val);
+        System.out.println(Thread.currentThread().getName()+":"+Thread.currentThread().getId()+":"+val);
     }
 
 }
